--- a/MyProject/templates/base.html
+++ b/MyProject/templates/base.html
@@ -27,16 +27,16 @@
     </head>
 
     <!-- Scrollable area -->
-    <body data-spy="scroll" data-target=".navbar" data-offset="20">
-        <nav class="navbar bg-light navbar-light navbar-expand-lg sticky-top">
+    {% comment %} data-spy="scroll" data-target=".navbar" data-offset="20" {% endcomment %}
+    <body>
+        <nav class="navbar bg-light navbar-light navbar-expand-lg sticky-top ">
             <div class="container">
-            
-
                 <!-- Mobile version toggler -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
+                <i class="fas fa-user" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample" style="font-size: 36px;"></i></a> <p>Zaloguj się</p>   
+                <div class="collapse navbar-collapse" id="navbarResponsive">           
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item"><a class="nav-link active" href="/">Strona Główna</a></li>
                         <li class="nav-item"><a class="nav-link" href="/about">O nas</a></li>
@@ -45,8 +45,8 @@
                     
                         <!-- Navbar social icons  -->
                     <ul class="nav navbar-nav flex-row justify-content-center flex-nowrap">
-                        <li class="nav-item"><a class="nav-link" href="https://github.com/Cielako" target="blank"><i class="fab fa-facebook-square" style="font-size: 36px;"></i></a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/Cielako/"target="blank"><i class="fab fa-instagram" style="font-size: 36px;"></i></a> </li>
+                        <li class="nav-item"><a class="nav-link p-1" href="https://github.com/Cielako" target="blank"><i class="fab fa-github" style="font-size: 36px;"></i></a></li>
+                        <li class="nav-item"><a class="nav-link p-1" href="https://www.instagram.com/Cielako/"target="blank"><i class="fab fa-instagram" style="font-size: 36px;"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -54,12 +54,33 @@
 
         <!-- Site Sections -->
         <div id="main">
-        {% block main %} {% endblock %}
+            {% block main %} {% endblock %}
+            <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+                <div class="offcanvas-header">
+                  <h5 class="offcanvas-title" id="offcanvasExampleLabel">Profil</h5>
+                  <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                  <div>
+                    Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
+                  </div>
+                  <div class="dropdown mt-3">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
+                      Dropdown button
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
         </div>
         <footer class="bg-light text-center text-lg-start ">
             <!-- Copyright -->
             <div class="text-center p-3">
-            &copy <script>document.write(new Date().getFullYear())</script>Copyright: <a href="https://github.com/Cielako">Cielako</a> 
+            &copy <script>document.write(new Date().getFullYear())</script> Copyright: <a href="https://github.com/Cielako">Cielako</a> 
             </div>
         </footer>
     </body>
