--- a/MyProject/templates/base.html
+++ b/MyProject/templates/base.html
@@ -38,9 +38,9 @@
                 <i class="fas fa-user" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample" style="font-size: 36px;"></i></a> <p>Zaloguj się</p>   
                 <div class="collapse navbar-collapse" id="navbarResponsive">           
                     <ul class="navbar-nav mx-auto">
-                        <li class="nav-item"><a class="nav-link active" href="/">Strona Główna</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/about">O nas</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/contact">Kontakt</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="{% url 'index'%}">Strona Główna</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'about'%}">O nas</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'contact'%}">Kontakt</a></li>
                     </ul>
                     
                         <!-- Navbar social icons  -->
@@ -54,6 +54,12 @@
 
         <!-- Site Sections -->
         <div id="main">
+          {% comment %} Tutaj wywołujemy testowa wiadomość przy module logowania{% endcomment %}
+            {% if messages %}
+              {% for message in messages %}
+               {{message}}
+              {% endfor %}
+            {% endif%}
             {% block main %} {% endblock %}
             <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
                 <div class="offcanvas-header">
