--- a/MyProject/templates/auth/login.html
+++ b/MyProject/templates/auth/login.html
@@ -6,13 +6,13 @@
     <form action="" method=POST>
         {% csrf_token %}
         <div class="mb-3">
-        <label for="login" class="form-label">Username</label>
+        <label for="login" class="form-label">Nazwa Użytkownika lub Adres e-mail</label>
         <input type="text" class="form-control" name="username" aria-describedby="loginHelp">
         </div>
         <div class="mb-3">
-        <label for="password" class="form-label">Password</label>
+        <label for="password" class="form-label">Hasło</label>
         <input type="password" class="form-control" name="password">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Zaloguj</button>
     </form>
 {% endblock %}
