--- a/MyProject/templates/base.html
+++ b/MyProject/templates/base.html
@@ -41,7 +41,7 @@
                       <i class="fas fa-user" style="font-size: 36px;"></i></a> {{request.user.username}}
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                      <a class="dropdown-item" href="#">Profil użytkownika</a>
+                      <a class="dropdown-item" href="{%url 'profile'%}">Profil użytkownika</a>
                       <a class="dropdown-item" href="#">Twoje zwierzęta</a>
                       <a class="dropdown-item" href="{%url 'logout'%}">Wyloguj</a>
                     </div>
