Panel administarcyjny danego usera - poprawiono pole tel

--- a/MyProject/templates/auth/password_change.html
+++ b/MyProject/templates/auth/password_change.html
@@ -10,10 +10,17 @@
             <label for="first_name" class="form-label">Nowe Hasło: </label>
             {{ form.new_password1 }}
         </div>
+        <ul>
+            <li>Twoje hasło nie powinno pokrywać się z Twoimi danymi </li>
+            <li>Twoje hasło powinno się składać z minimum 8 znaków</li>
+            <li>Twoje hasło nie powinno być zbyt powszechne</li>
+            <li>Twoje hasło nie powinno zawierać samych cyfr</li>
+        </ul>
         <div class="mb-3">
             <label for="last_name" class="form-label">Powtórz Hasło:</label>
             {{ form.new_password2 }}
         </div>
+        <p>Hasła musza się zgadzać</p>
         <button type="submit" class="btn btn-primary">Zmień Hasło</button>
     </form>
 {% endblock %}
