--- a/MyProject/templates/base.html
+++ b/MyProject/templates/base.html
@@ -46,6 +46,16 @@
                       <a class="dropdown-item" href="{%url 'logout'%}">Wyloguj</a>
                     </div>
                   </div>
+                {%else%}
+                  <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <i class="fas fa-user" style="font-size: 36px;"></i></a> Gość
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                      <a class="dropdown-item" href="{%url 'login'%}">Zaloguj się</a>
+                      <a class="dropdown-item" href="{%url 'register'%}">Zarejestruj się</a>
+                    </div>
+                  </div>
                 {%endif%}   
                 <div class="collapse navbar-collapse" id="navbarResponsive">           
                     <ul class="navbar-nav mx-auto">
