--- a/MyProject/templates/index.html
+++ b/MyProject/templates/index.html
@@ -27,10 +27,10 @@
         </div>
     </form>
     {% comment %} Testowe menu logowania - należy utworzyć własny model dla użytkowników {% endcomment %}
-    {%if request.user.is_authenticated %}
+    {% comment %} {%if request.user.is_authenticated %}
         <a href="{%url 'logout'%}">Wyloguj</a>
     {% else %}
         <a href="{%url 'login'%}">Zaloguj</a>
         <a href="{%url 'register'%}">Zarejestruj</a>
-    {% endif %}
+    {% endif %} {% endcomment %}
 {% endblock %}
