Wyswietlanie profilu danego zwierzecia

--- a/MyProject/templates/base.html
+++ b/MyProject/templates/base.html
@@ -42,7 +42,7 @@
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                       <a class="dropdown-item" href="{%url 'profile'%}">Profil użytkownika</a>
-                      <a class="dropdown-item" href="#">Twoje zwierzęta</a>
+                      <a class="dropdown-item" href="{%url 'my_pets'%}">Twoje zwierzęta</a>
                       <a class="dropdown-item" href="{%url 'logout'%}">Wyloguj</a>
                     </div>
                   </div>
