--- a/MyProject/templates/index.html
+++ b/MyProject/templates/index.html
@@ -10,9 +10,8 @@
 
 {% block main %}
 
-    <form class="form-inline" action="/profile/" method="POST" class="form-inline" id="search_bar" >
+    <form class="form-inline" action="pets/profile/" method="POST" class="form-inline" id="search_bar" >
         {% csrf_token %}
-        
         <div class="input-group mb-2 mr-sm-2">
             <div class="input-group-prepend">
                 <div class="input-group-text"><i class="fa fa-paw" style="font-size: 24px;"></i></div>
