Testowe dodawanie zwierzat z profilu uzytkownika

--- a/MyProject/templates/auth/profile.html
+++ b/MyProject/templates/auth/profile.html
@@ -4,7 +4,8 @@
 
 {% block title %}Edytuj Profil{% endblock title %}
 
-{% block main %} 
+{% block main %}
+    <H1>Twój profil użytkownika</H1> 
         {% csrf_token %}
         <div class="mb-3">
             <label for="first_name" class="form-label">Imię:</label>
