--- a/MyProject/templates/auth/profile_edit.html
+++ b/MyProject/templates/auth/profile_edit.html
@@ -4,7 +4,8 @@
 
 {% block title %}Edytuj Profil{% endblock title %}
 
-{% block main %} 
+{% block main %}
+    <H1>Edytuj dane kontaktowe</H1>
     <form action="" method=POST>
         {% csrf_token %}
         <div class="mb-3">
